<resources>
    <string name="app_name">山有木兮木有枝</string>
    <string name="app_name_all">山有木兮木有枝　　\n　　心悦君兮愿君知</string>
    <string name="menu_a">首页</string>
    <string name="menu_b">menu_a</string>
    <string name="menu_c">menu_a</string>
    <string name="menu_d">menu_a</string>
    <string name="menu_e">menu_a</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">手机号/用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phone">手机号</string>
    <string name="btn_get_code">发送验证码</string>
    <string name="set_password">设置密码:必须是以字母开头,8位以上的字母和数字组合</string>
    <string name="set_password_again">重复密码</string>
    <string name="set_new_password">设置新密码</string>
    <string name="czmm">重置密码</string>
    <string name="accessibility_service_label">山有木兮辅助服务</string>
</resources>
