<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:context="clocklife.shenle.com.LoginActivity">
    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               android:src="@mipmap/login_bg"/>
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:layout_marginBottom="30dp"
                      android:layout_marginTop="30dp"
                      android:gravity="center"
                      android:lineSpacingMultiplier="1.3"
                      android:text="@string/app_name_all"
                      android:textColor="@color/text_color_2"
                      android:textSize="@dimen/text_size_62"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/name_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:imeOptions="actionNext"
                    android:inputType="phone|textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                style="@style/BottomSubmitButtom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/bt_register"
                    style="@style/NomorlText28Red"
                    android:background="@null"
                    android:text="注册"/>
                <Button
                    android:id="@+id/bt_find_password"
                    style="@style/NomorlText28Red"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:text="忘记密码"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
